# nhsdigital.patient-care-aggregator-api

./: Makefile  pyproject.toml  pytest.ini
.github/workflows/: continuous-integration.yml
scripts/: access_token.py  client_creds.py  generate_examples.py
specification/: patient-care-aggregator-api-consumer-api.yaml  patient-care-aggregator-api-producer-api-standards.yaml  patient-care-aggregator-api-record-service-api.yaml
tests/: api_tests.py  conftest.py  test_endpoints.py
tests/configuration/: environment.py
