[tool.poetry]
name = "patient-care-aggregator-api"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/patient-care-aggregator-api"
homepage = "https://internal-dev.api.service.nhs.uk/patient-care-aggregator-api"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.2"

[tool.poetry.dev-dependencies]
flake8 = "^7.0"
black = "^24.0"
pip-licenses = "^4.0"
jinja2 = "^3.1.5"
pyyaml = "^6.0"
docopt-ng = "^0.9.0"
jsonpath-ng = "^1.6"
semver = "^2.9.0"
gitpython = "^3.1.46"
pytest = "^8.0"
coverage = "^7.5"
aiohttp = "^3.9"
pytest-asyncio = "^0.24"
lxml = "^5.0"
cryptography = "^42.0"
pyjwt = "^2.8"
selenium = "^4.0"
# api-test-utils is installed separately with --no-deps (see Makefile) because its
# pinned transitive dependencies (pytest<7, pytest-asyncio<0.15) conflict with Python 3.13.

[tool.poetry.scripts]
